// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:layout:Footer:Wrapper matches the snapshot when format is desktop 1`] = `
.c0 {
  background-color: #202020;
  border-top: 7px solid #444141;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 98px;
}

<div
  className="c0"
  format="desktop"
/>
`;

exports[`components:layout:Footer:Wrapper matches the snapshot when format is mobile 1`] = `
.c0 {
  background-color: #202020;
  border-top: 7px solid #444141;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 135px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
  format="mobile"
/>
`;

exports[`components:layout:Footer:Wrapper matches the snapshot when format is tablet 1`] = `
.c0 {
  background-color: #202020;
  border-top: 7px solid #444141;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100px;
}

<div
  className="c0"
  format="tablet"
/>
`;
